Added description meta tag. Fixed title tag

--- a/thousands/templates/about.html
+++ b/thousands/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}О проекте{% endblock %}
+{% block description %}О проекте{% endblock %}
 {% block content %}
 <div class="row">
   <div class="column-4">
