--- a/thousands/templates/map.html
+++ b/thousands/templates/map.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Карта{% endblock %}
+{% block title %}Тысячники Южного Урала - Карта{% endblock %}
+{% block description %}Вершины Южного Урала выше тысячи метров на карте{% endblock %}
 {% block content %}
 <div id="map"></div>
 <script>
