--- a/thousands/templates/table.html
+++ b/thousands/templates/table.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Список вершин{% endblock %}
+{% block title %}Таблица тысячников Южного Урала{% endblock %}
+{% block description %}Все вершины Южного Урала выше тысячи метров в таблице{% endblock %}
 {% block content %}
 <ul class="nav nav-pills">
     <li role="presentation" {%  if sort == 'ridge' %} class="active"{% endif %} >
