--- a/thousands/templates/top.html
+++ b/thousands/templates/top.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}Восходители{% endblock %}
+{% block description %}Восходители на вершины Южного Урала{% endblock %}
 {% block content %}
 <table class="table">
     <thead>
