--- a/thousands/templates/layout.html
+++ b/thousands/templates/layout.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="HandheldFriendly" content="True">
+  <meta name="description" content="{% block description %}Вершины Южного Урала выше тысячи метров{% endblock %}">
 
   <title>{% block title %} {% endblock %}</title>
 
