--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block title %} хр. {{ summit.ridge }} - {{ summit.format_name() }} {{ summit.format_name_alt() }} {% endblock %}
+{% block title %}{{ summit.format_name() }} {{ summit.format_name_alt() }} {% endblock %}
+{% block description %}Вершина {{ summit.format_name() }} {{ summit.format_name_alt() }} хребта {{ summit.ridge }} &mdash; расшифровка названия, высота, координаты{% endblock %}
 {% block content %}
 <h1>
 {{ summit.format_name() }} <small>{{ summit.format_name_alt() }}
