Added dummy icons for climbers

--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -53,7 +53,7 @@
         {% if c['user'].preview_id %}
         <img src="{{ url_for("image_get", image_id=c['user'].preview_id)}}" class="media-object">
         {% else %}
-        <img src="/static/1px.png" class="media-object">
+        <img src="/static/climber_sm.png" class="media-object">
         {% endif %}
         </a>
     </div>
