--- a/thousands/templates/top.html
+++ b/thousands/templates/top.html
@@ -13,10 +13,12 @@
         {% for c in climbers %}
         <tr>
             <td class="vertical-align">
-                {% if c.preview_id %}
-                <img src="{{ url_for("image_get", image_id=c.preview_id)}}">
-                {% endif %}
-                <a href="{{ url_for('user', user_id=c.id) }}">{{ c.name }}</a>
+                 {% if c.preview_id %}
+                 <a href="{{ url_for('user', user_id=c.id) }}"><img src="{{ url_for("image_get", image_id=c.preview_id)}}"></a>
+                 {% else %}
+                 <img src="/static/climber_sm.png">
+                 {% endif %}
+                 <a href="{{ url_for('user', user_id=c.id) }}">{{ c.name }}</a>
             </td>
             <td class="vertical-align"><big>{{ c.climbs }}</big></td>
             <td class="vertical-align"><big>{{ loop.index }}</big></td>
