Aligned image in user profile

--- a/thousands/static/style.css
+++ b/thousands/static/style.css
@@ -10,7 +10,8 @@ body { padding-top: 70px;}
 }
 
 .user-image-large {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .table tbody>tr>td.vertical-align {
     vertical-align: middle;
