--- a/thousands/templates/table.html
+++ b/thousands/templates/table.html
@@ -11,10 +11,10 @@
             <a {% if sort != 'name' %}href="{{ url_for('table', sort='name') }}"{% endif %}>Название</a>
         </th>
         <th class="{% if sort == 'height' %}info{% else %}clickable-cell active{% endif %}">
-            <a {% if sort != 'height' %}href="{{ url_for('table') }}"{% endif %}>Высота</a>
+            <a {% if sort != 'height' %}href="{{ url_for('table', sort='height') }}"{% endif %}>Высота</a>
         </th>
         <th class="{% if sort == 'ridge' %}info{% else %}clickable-cell active{% endif %}">
-            <a {% if sort != 'ridge' %}href="{{url_for('table', sort='ridge')}}"{% endif %}>Хребет</a>
+            <a {% if sort != 'ridge' %}href="{{url_for('table')}}"{% endif %}>Хребет</a>
         </th>
     </tr>
 </thead>
