--- a/thousands/templates/table.html
+++ b/thousands/templates/table.html
@@ -26,11 +26,15 @@
             {% if s.climbed %}
             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
             {% endif %}
+            {% if s.main %}
+            <b><a href="/summit/{{ s.id }}" title="Главная (высочайшая) вершина хребта">{{s.format_name() }} {{ s.format_name_alt() }}</a></b>
+            {% else %}
             <a href="/summit/{{ s.id }}">{{s.format_name() }} {{ s.format_name_alt() }}</a>
+            {% endif %}
         </td>
         <td>
             {% if s.main %}
-            <b>{{ s.height }}</b>
+            <b title="Главная (высочайшая) вершина хребта">{{ s.height }}</b>
             {% else %}
             {{ s.height }}
             {% endif %}
