--- a/thousands/templates/climb_edit.html
+++ b/thousands/templates/climb_edit.html
@@ -25,13 +25,15 @@
   <div class="form-group">
     <label for="name_alt" class="col-md-3 control-label">Дата</label>
     <div class="col-md-6">
-    {{ form.date(class_='form-control datepicker') }}
+    {{ form.date(class_='form-control datepicker', **{'aria-describedby': 'helpBlockDate'}) }}
+    <span id="helpBlockDate" class="help-block">Необязательное поле</span>
     </div>
   </div>
   <div class="form-group">
     <label for="height" class="col-md-3 control-label">Комментарий</label>
     <div class="col-md-6">
-    {{ form.comment(class_='form-control') }}
+    {{ form.comment(class_='form-control', **{'aria-describedby': 'helpBlockComment'}') }}
+    <span id="helpBlockComment" class="help-block">Необязательное поле</span>
     </div>
   </div>
    <div class="form-group">
