--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -40,14 +40,14 @@
     </dl>
 {% elif climbers | length  == 0 or current_user != climbers[0]['user'] %} 
     <dl class="dl-horizontal">
-        <dd><a class="btn btn-primary" href="{{ url_for('climb_new', summit_id=summit.id) }}" data-remote="false" data-toggle="modal" data-target="#authModal">Взошли на эту вершину?</a></dd>
+        <dd><a class="btn btn-primary" href="{{ url_for('climb_new', summit_id=summit.id) }}">Взошли на эту вершину?</a></dd>
     </dl>
 {% endif %}
 <h3>
     Восходители
 </h3>
 {% if climbers | length == 0 %}
-Никто пока не зарегистрировал восхождение на эту вершину.
+Никто пока не сообщил о восхождении на эту вершину.
 {% endif %}
 <ul class="media-list">
     {% for c in climbers %}
