--- a/thousands/templates/climb_edit.html
+++ b/thousands/templates/climb_edit.html
@@ -32,7 +32,7 @@
   <div class="form-group">
     <label for="height" class="col-md-3 control-label">Комментарий</label>
     <div class="col-md-6">
-    {{ form.comment(class_='form-control', **{'aria-describedby': 'helpBlockComment'}') }}
+    {{ form.comment(class_='form-control', **{'aria-describedby': 'helpBlockComment'}) }}
     <span id="helpBlockComment" class="help-block">Необязательное поле</span>
     </div>
   </div>
