Sort by climbers count

--- a/thousands/templates/table.html
+++ b/thousands/templates/table.html
@@ -16,8 +16,8 @@
         <th class="{% if sort == 'ridge' %}info{% else %}clickable-cell active{% endif %}">
             <a {% if sort != 'ridge' %}href="{{url_for('table')}}"{% endif %}>Хребет</a>
         </th>
-        <th class="{% if sort == 'climbers_count' %}info{% else %}clickable-cell active{% endif %}">
-            <a {% if sort != 'climbers_count' %}href="{{url_for('table', sort='climbers_count')}}"{% endif %}>Восходителей</a>
+        <th class="{% if sort == 'climbers' %}info{% else %}clickable-cell active{% endif %}">
+            <a {% if sort != 'climbers' %}href="{{url_for('table', sort='climbers')}}"{% endif %}>Восходителей</a>
         </th>
     </tr>
 </thead>
@@ -44,7 +44,7 @@
             {% endif %}
         </td>
         <td>{{ s.ridge }}</td>
-        <td>{{ s.climbers_count }}</td>
+        <td>{{ s.climbers }}</td>
     </tr>
     {% endfor %}
 </tbody>
