--- a/thousands/templates/climb_edit.html
+++ b/thousands/templates/climb_edit.html
@@ -25,8 +25,13 @@
   <div class="form-group">
     <label for="name_alt" class="col-md-3 control-label">Дата</label>
     <div class="col-md-6">
-    {{ form.date(class_='form-control datepicker', **{'aria-describedby': 'helpBlockDate'}) }}
-    <span id="helpBlockDate" class="help-block">Необязательное поле</span>
+        <div class="input-group date">
+            {{ form.date(class_='form-control datepicker', **{'aria-describedby': 'helpBlockDate'}) }}
+            <div class="input-group-addon">
+                <span class="glyphicon glyphicon-th"></span>
+            </div>
+        </div>
+        <span id="helpBlockDate" class="help-block">Необязательное поле. Если точная дата неизвестна, можно ввести только месяц (например <strong>2.2012</strong>) или только год (например <strong>2012</strong>)</span>
     </div>
   </div>
   <div class="form-group">
@@ -43,12 +48,12 @@
   </div>
 </form>
 <script>
-$('.datepicker').datepicker({
+$('.date').datepicker({
     autoclose: true,
     format: 'dd.mm.yyyy',
+    showOnFocus: false,
     endDate: '0d',
     language: 'ru',
-    //immediateUpdates: true
 });
 </script>
 {% endblock %}
