--- a/thousands/templates/menu.html
+++ b/thousands/templates/menu.html
@@ -7,7 +7,17 @@
   {% if not current_user.is_authenticated %}
   <li><a href="/login?r={{ request.path }}" data-remote="false" data-toggle="modal" data-target="#authModal">Вход</a>
   {% else %}
-  <li {%  if active_page == 'profile' %} class="active"{% endif %}><a href="{{ url_for('profile') }}">{{ current_user.name }}</a></li>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ current_user.name }}<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ url_for('profile') }}">Профиль</a></li>
+            <li><a href="{{ url_for('logout') }}">Выйти</a></li>
+          </ul>
+        </li>
+  {#
+  <li {%  if active_page == 'profile' %} class="active"{% endif %} title="Профиль"><a href="{{ url_for('profile') }}">{{ current_user.name }}</a></li>
+  <li><a href="{{ url_for('logout') }}" title="Выйти"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span></a></li>
+  #}
   {% endif %}
 
 </ul>
