--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -2,6 +2,15 @@
 {% block title %}{{ summit.format_name() }} {{ summit.format_name_alt() }} {% endblock %}
 {% block description %}Вершина {{ summit.format_name() }} {{ summit.format_name_alt() }} хребта {{ summit.ridge }} &mdash; расшифровка названия, высота, координаты{% endblock %}
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+<div class="alert alert-success" role="alert">
+    {% for message in messages %}
+      {{ message }}
+    {% endfor %}
+</div>
+  {% endif %}
+{% endwith %}
 <h1>
 {{ summit.format_name() }} <small>{{ summit.format_name_alt() }}
 {% if current_user.admin %}
@@ -53,7 +62,11 @@
     {% for c in climbers %}
     <li class="media">
     <div class="media-left">
-        <a href="{{ url_for('user', user_id=c['user'].id) }}">
+        {% if c['user'] == current_user %}
+            <a href="{{ url_for('profile') }}">
+        {% else %}
+            <a href="{{ url_for('user', user_id=c['user'].id) }}">
+        {% endif %}
         {% if c['user'].preview_id %}
         <img src="{{ url_for("image_get", image_id=c['user'].preview_id)}}" class="media-object">
         {% else %}
@@ -63,7 +76,11 @@
     </div>
     <div class="media-body">
         <h4 class="media-heading">
-            <a href="{{ url_for('user', user_id=c['user'].id) }}">{{ c['user'].name }}</a>
+            {% if c['user'] == current_user %}
+                <a href="{{ url_for('profile') }}">{{ c['user'].name }}</a> 
+            {% else %}
+                <a href="{{ url_for('user', user_id=c['user'].id) }}">{{ c['user'].name }}</a> 
+            {% endif %}
         </h4>
         {% if c['date'] is not none %}<div class="text-muted"><i>{{ c['date'].format() }}</i></div>{% endif %}
         {% if c['comment'] %}{{ c['comment'] }}{% endif %}
