--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -20,7 +20,11 @@
     </div>
     <div class="col-md-6">
     {% if climbed | length == 0 %}
-        Этот восходитель еще не сообщил ни об одной посещенной вершине.
+        {% if current_user == user %}
+            Этот восходитель еще не сообщил ни об одной посещенной вершине.
+        {% else %}
+            Вы еще не сообщили ни об одной посещенной вершине. Найти вершину, на которую вы взошли можно <a href="{{ url_for('index') }}">на карте</a> или <a href="{{ url_for('table') }}">в таблице</a>.
+        {% endif %}
     {% else %}
     <h3>Посещенные вершины <small>(всего {{ climbed | length }})</small></h3>
     <ul class="media-list">
