--- a/thousands/templates/user.html
+++ b/thousands/templates/user.html
@@ -10,6 +10,15 @@
 {% endblock %}
 {% block content %}
 <h1>{{ user.name }}</h1>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+<div class="alert alert-success" role="alert">
+    {% for message in messages %}
+      {{ message }}
+    {% endfor %}
+</div>
+  {% endif %}
+{% endwith %}
 <div class="row">
     <div class="col-md-3 text-right">
         {% if user.image_id %}
@@ -37,6 +46,10 @@
         </h4>
         {% if c.date %}<div class="text-muted"><i>{{ c['date'].format() }}</i></div>{% endif %}
         {{ c['comment'] }}
+        {% if user == current_user %}
+            <small><a href="{{ url_for('profile_climb_edit', summit_id=c.summit.id) }}">Редактировать</a></small>
+            <small><a href="{{ url_for('profile_climb_delete', summit_id=c.summit.id) }}" class="simple-delete-confirm">Удалить</a></small>
+        {% endif %}
         </div>
     </li>
     {% endfor %}
