--- a/thousands/static/style.css
+++ b/thousands/static/style.css
@@ -1,9 +1,22 @@
-html, body, .container, #map { height: 100%; }
+html, body, .container-map {
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+}
+
+body {
+    padding-top: 50px;
+}
+
+#map {
+    width: auto;
+    height: 100%;
+}
+
 #coordinates-pick-map { 
     margin-top: 15px;
     height: 300px; 
 }
-body { padding-top: 70px;}
 
 .dl-horizontal dt {
     white-space: normal;
