Added registration link to login widget

--- a/thousands/templates/login.html
+++ b/thousands/templates/login.html
@@ -1,2 +1,4 @@
 <a type="button" class="btn btn-primary btn-lg btn-block btn-auth-vk" href="{{ vk_flow.step1_get_authorize_url() }}">Войти через ВКонтакте</a>
 <a type="button" class="btn btn-primary btn-lg btn-block btn-auth-su"  href="{{ su_flow.step1_get_authorize_url() }}">Войти через southural.ru</a>
+
+<p class="login-comment text-muted">Если у вас нет аккаунта в социальных сетях или вы по каким-то причинам не желаете использовать его для входа, можно <a href="http://www.southural.ru/user/register">зарегистрироваться на сайте southural.ru</a> и использовать этот аккаунт для входа.</p>
