Added header to top page

--- a/thousands/templates/top.html
+++ b/thousands/templates/top.html
@@ -2,6 +2,7 @@
 {% block title %}Восходители{% endblock %}
 {% block description %}Восходители на вершины Южного Урала{% endblock %}
 {% block content %}
+<h1>Рейтинг восходителей</h1>
 <table class="table">
     <thead>
         <tr>
