--- a/thousands/templates/summit.html
+++ b/thousands/templates/summit.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}{{ summit.format_name() }} {{ summit.format_name_alt() }} {% endblock %}
-{% block description %}Вершина {{ summit.format_name() }} {{ summit.format_name_alt() }} хребта {{ summit.ridge }} &mdash; расшифровка названия, высота, координаты{% endblock %}
+{% block title %}{{ summit.format_name() }} {% endblock %}
+{% block description %}Вершина {{ summit.format_name() }} хребта {{ summit.ridge }} &mdash; расшифровка названия, высота, координаты{% endblock %}
 {% block content %}
 {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -12,13 +12,18 @@
   {% endif %}
 {% endwith %}
 <h1>
-{{ summit.format_name() }} <small>{{ summit.format_name_alt() }}
+{{ summit.format_name() }} 
 {% if current_user.admin %}
 <a href="{{ url_for('summit_edit', summit_id=summit.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
 <a href="{{ url_for('summit_delete', summit_id=summit.id) }}" class="simple-delete-confirm"><span class="glyphicon glyphicon-remove"></span></a>
 {% endif %}
-</small>
 </h1>
+{% if summit.name_alt %}
+<dl class="dl-horizontal">
+    <dt>Варианты названий</dt>
+    <dd>{{ summit.name_alt }}</dd>
+</dl>
+{% endif %}
 <dl class="dl-horizontal">
     <dt>Высота</dt>
     <dd>{{ summit.height }}</dd>
