#31 Redirect after climb edit

--- a/thousands/static/style.css
+++ b/thousands/static/style.css
@@ -52,3 +52,10 @@ th.clickable-cell a {
 .login-comment {
     padding-top: 10px;
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -60px;
+    visibility: hidden;
+}
